--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 /* SCROLLBAR */
-.contacts-list-box::-webkit-scrollbar, .main-section::-webkit-scrollbar {
+*::-webkit-scrollbar {
     /*chrome - safari*/
     display: none;
 }
