--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 /* SCROLLBAR */
@@ -14,6 +15,7 @@
     /*firefox*/
     scrollbar-width: thin;
     scrollbar-color: #00a093 #dce0db;
+    scroll-behavior: smooth;
 }
 
 body{
