--- a/css/style.css
+++ b/css/style.css
@@ -234,10 +234,17 @@ img.avatar-img {
 /* Message bar*/
 .message-bar {
     height: 60px;
-    display: flex;
+}
+
+.message-bar-content{
+    display: none;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
+}
+
+.message-bar-content.active{
+    display: flex;
 }
 
 .message-bar input {
@@ -260,6 +267,24 @@ img.avatar-img {
     color: grey;
 }
 
+/* Tasto invio messaggio / rec */
+
+i.rec-audio-btn {
+    display: none;
+}
+
+i.rec-audio-btn.active {
+    display: block;
+}
+
+i.send-message-btn {
+    display: none;
+}
+
+i.send-message-btn.active {
+    display: block;
+}
+
 /* Open contact bar*/
 .open-contact-bar {
     display: flex;
@@ -269,8 +294,12 @@ img.avatar-img {
 }
 
 .open-contact-bar-left {
-    display: flex;
+    display: none;
     align-items: center;
+}
+
+.open-contact-bar-left.active{
+    display: flex;
 }
 
 .open-avatar {
@@ -293,11 +322,15 @@ img.avatar-img {
 }
 
 .open-settings {
-    display: flex;
+    display: none;
     align-items: center;
     flex-basis: 80px;
     justify-content: space-between;
     color: gray;
+}
+
+.open-settings.active{
+    display:flex;
 }
 
 .messages-box {
@@ -308,6 +341,10 @@ img.avatar-img {
     right: 0;
     padding: 0 20px;
     overflow-y: auto;
+    display: none;
+}
+.messages-box.active{
+    display: block;
 }
 
 .template-message-sent {
@@ -356,22 +393,4 @@ div[class*=-bubble] {
 .message-time {
     font-size: 11px;
     color: grey;
-}
-
-/* Tasto invio messaggio / rec */
-
-i.rec-audio-btn {
-    display: none;
-}
-
-i.rec-audio-btn.active {
-    display: block;
-}
-
-i.send-message-btn {
-    display: none;
-}
-
-i.send-message-btn.active {
-    display: block;
 }
