Corretti problemi aggiunta messaggi e scroll

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
     min-width: 850px;
     border-radius: 10px 10px 0px 0px;
     overflow: hidden;
+    box-shadow: 0px 3px 24px -4px rgba(29,29,29,0.57);
 }
 
 .container div[class*=-column] {
